fix: adds CHNDM page, begins FSG page, fixes several bugs